feat: add schemas for authentication, user management, and project uploads
- Created `auth.ts` for password validation and user registration/login schemas.
- Added `profile.ts` for change password schema with validation.
- Introduced `projects.ts` for project upload schema with file type and size validation.
- Developed `users.ts` for user editing and addition schemas with password confirmation.
- Defined `api.ts` for user data type structure.
- Added `pnpm-workspace.yaml` to ignore specific built dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-# Python
-__pycache__/
-*.pyc
-.venv/
-.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
